--- a/06-collectionframework/.project
+++ b/06-collectionframework/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>05-exceptions</name>
+	<name>06-collectionframework</name>
 	<comment></comment>
 	<projects>
 	</projects>
